--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
+        transitive = true
+    }
+    compile 'me.grantland:autofittextview:0.2.+'
     compile 'com.google.code.gson:gson:2.5'
 }
