--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ViewReminder"
             android:parentActivityName=".MainActivity"
             android:theme="@style/ViewReminderTheme"></activity>
+        <receiver android:name=".NotificationAlarm" />
     </application>
 
 </manifest>
