--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".WelcomePages"
+        <activity
+            android:name=".WelcomePages"
+            android:noHistory="true"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,15 +17,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme"></activity>
-        <activity android:name=".ViewReminder"
+        <activity
+            android:name=".ViewReminder"
             android:parentActivityName=".MainActivity"
             android:theme="@style/ViewReminderTheme"></activity>
-        <activity android:name=".RemindMeAgainNotification"
+        <activity
+            android:name=".RemindMeAgainNotification"
             android:theme="@style/AppTheme"></activity>
-        <activity android:name=".RecycleBin"
+        <activity
+            android:name=".RecycleBin"
             android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".AllReminders"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".AddNote"
+            android:parentActivityName=".AllNotes"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".AllNotes"
+            android:theme="@style/AppTheme"></activity>
+
         <receiver android:name=".NotificationAlarm" />
     </application>
 
